safari spacing fix?

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,6 @@ a {
   position: relative;
   padding-top: 56.25%;
   margin: auto;
-  border-radius: ;
 
 
 }
